--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "name": "nailsapp/module-survey",
-    "keywords": ["Nails", "Shed Collective", "CodeIgniter", "Survey Module"],
+    "keywords": [
+        "Nails",
+        "Shed Collective",
+        "CodeIgniter",
+        "Survey Module"
+    ],
     "homepage": "http://nailsapp.co.uk/modules/survey",
     "description": "This module brings survey functionality to Nails.",
     "license": "MIT",
-    "authors":
-    [
+    "authors": [
         {
             "name": "Pablo de la Pena",
             "email": "p@nailsapp.co.uk",
@@ -13,33 +17,34 @@
             "role": "Developer"
         }
     ],
-    "support":
-    {
+    "support": {
         "email": "hello@nailsapp.co.uk"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "require":
-    {
+    "require": {
         "nailsapp/common": "dev-develop",
         "nailsapp/module-form-builder": "dev-develop",
         "nailsapp/module-captcha": "dev-develop"
     },
-    "require-dev":
-    {
+    "require-dev": {
         "phpunit/phpunit": "4.*"
     },
-    "autoload":
-    {
-        "psr-4": {"Nails\\Survey\\": "src/"}
+    "autoload": {
+        "psr-4": {
+            "Nails\\Survey\\": "src/"
+        }
     },
-    "extra":
-    {
-        "nails" :
-        {
+    "extra": {
+        "nails": {
             "moduleName": "survey",
             "type": "module",
-            "namespace": "Nails\\Survey\\"
+            "namespace": "Nails\\Survey\\",
+            "data": {
+                "nailsapp/module-api": {
+                    "namespace": "survey"
+                }
+            }
         }
     }
 }
