Updated Nails vendor prefix (`nailsapp` › `nails`)

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nailsapp/module-survey",
+    "name": "nails/module-survey",
     "keywords": [
         "Nails",
         "Shed Collective",
@@ -23,9 +23,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "nailsapp/common": "dev-develop",
-        "nailsapp/module-form-builder": "dev-develop",
-        "nailsapp/module-captcha": "dev-develop"
+        "nails/common": "dev-develop",
+        "nails/module-form-builder": "dev-develop",
+        "nails/module-captcha": "dev-develop"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
@@ -41,7 +41,7 @@
             "type": "module",
             "namespace": "Nails\\Survey\\",
             "data": {
-                "nailsapp/module-api": {
+                "nails/module-api": {
                     "namespace": "survey"
                 }
             }
