--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "nails/module-captcha": "dev-develop"
     },
     "require-dev": {
-        "phpunit/phpunit": "7.5.1"
+        "phpunit/phpunit": "7.*"
     },
     "autoload": {
         "psr-4": {
