--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,13 @@
         "nails/module-form-builder": "dev-develop",
         "nails/module-captcha": "dev-develop"
     },
+    "scripts": {
+        "test": "./vendor/bin/phpunit",
+        "analyse": "./vendor/bin/phpstan analyse -c .phpstan/config.neon"
+    },
     "require-dev": {
-        "phpunit/phpunit": "9.*"
+        "phpunit/phpunit": "9.*",
+        "phpstan/phpstan": "0.*"
     },
     "autoload": {
         "psr-4": {
