--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,18 @@
             "type": "module",
             "namespace": "Nails\\Survey\\",
             "data": {
+                "nails/module-admin": {
+                    "autoload": {
+                        "assets": {
+                            "js": [
+                                "admin.min.js"
+                            ],
+                            "css": [
+                                "admin.min.css"
+                            ]
+                        }
+                    }
+                },
                 "nails/module-api": {
                     "namespace": "survey"
                 }
